# COLOR_MTI_SH_EXITS

./: README.md  backtest copy.ipynb  backtest.ipynb  backtest.py  config.yaml  makemetricpng.py  pyproject.toml  savetopdf.py
